<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Laptop Warranty Check</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="scanSerial">Scan and check</string>
    <string name="serialNumber">Serial Number:</string>
    <string name="textMachineType">Machine Type:</string>
    <string name="labelWarranty">Warranty:</string>
    <string name="labelManufacturer">Manufacturer:</string>

</resources>